--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 PORT=5432
 USERDB=default
-HOST=ep-mute-boat-a4lrxwvx-pooler.us-east-1.aws.neon.tech
-PASSWORD=rR0JCuQFBh8L
+HOST=ep-noisy-hall-a4ulia68-pooler.us-east-1.aws.neon.tech
+PASSWORD=mqrcESxL9u1j
 DATABASE=verceldb
+
+
+
